Update BOT_TOKEN and ADMIN_ID in .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN=8478841875:AAGg0XIIbQ_OamBOHW3TEYRe_WODE7A4KuE
-ADMIN_ID=@gptsmarket_bot  # твой Telegram ID
+BOT_TOKEN=@hrgptsbot
+CONSULTANT_ID=816302760   # замени на свой Telegram ID
